Resolves: fdo#78128 go back to using an interim metafile

this time we know that the other varient of "Move" doesn't
handle pixel drawing stuff like the dpi-using one does.

and the move values have to be in 100TH_MM_MAP and
with the true numbers of the write page size

Change-Id: I15fdb78797d8744702bec649024fedbf3e39b342